--- a/style.css
+++ b/style.css
@@ -152,10 +152,62 @@ image{
 }
 .services-list{
     display: grid;
-    grid-template-columns: repeat(auto-fit,minmax(250px 1fr));
-    grid: gap 40px;
+    grid-template-columns: repeat(auto-fit,minmax(250px ,1fr));
+    grid-gap: 40px;
     margin-top: 50px;
 }
+
+.services-list div{
+    background-color: gray;
+    padding: 40px;
+    font-size: 14px;
+    font-weight: 300;
+    border-radius: 10px;
+    transition: background 0.5s,transform 0.5s;
+}
+.services-list div i{
+    font-size: 50px;
+    margin-bottom: 30px;
+}
+.services-list div h2{
+    font-size: 30px;
+    font-weight: 500;
+    margin-bottom: 15px;
+
+}
+.services-listdiv a{
+    text-decoration: none;
+    color: blue;
+    font-size: 12px;
+    margin-top: 20px;
+    display: inline-block;
+}
+.services-list div:hover{
+    background: red;
+    transform: translate(-10px);
+}
+/*---------portfolio--------*/
+#portfolio{
+    padding: 50px 20px;
+}
+.work-list{
+   display: grid;
+    grid-template-columns: repeat(auto-fit,minmax(250px ,1fr));
+    grid-gap: 40px;
+    margin-top: 50px;
+}
+.work{
+    border-radius: 10px;
+    position: relative;
+    overflow: hidden;
+}
+ 
+
+
+
+    
+    
+
 
     
 
